# Make sure C/CXX are enabled before doing this
enable_language(C CXX)

project(HorusTruePositiveTestSet)
cmake_minimum_required(VERSION 2.8)

enable_testing()

if(MSVC)
  add_definitions(-P)
endif()

add_subdirectory(ACCESS_NONEXISTENT_MEMBERS)
add_subdirectory(ALREADY_OWNED_POINTER)
add_subdirectory(ALTERNATING_INPUT_OUTPUT)
add_subdirectory(AVOID_DEADLOCK)
add_subdirectory(ATEXIT_HANDLER_CALLS_EXIT)

add_subdirectory(CALL_EVERY_FUNCTION_GLOBAL)
add_subdirectory(CAST_ALTERS_VALUE.EXT)
add_subdirectory(CHECK_ALIGNMENT_OF_MEMORY)
add_subdirectory(CODE_INJECTION.RETURN_ADDRESS)
add_subdirectory(CLEARTEXT_TRANSMISSION_OF_SENSITIVE_INFORMATION)
add_subdirectory(CONFIGURATION_SETTING)

add_subdirectory(DANGEROUS_USE_OF_TAINTED_VALUES)
add_subdirectory(DECLARE_OBJECTS_SHARED_BETWEEN_THREADS)
add_subdirectory(DIV_BY_ZERO)
add_subdirectory(DIV_BY_ZERO.MISSING_CHECK)
add_subdirectory(DOUBLE_CLOSE)
add_subdirectory(DO_NOT_ACCESS_SHARED_OBJECT_IN_HANDLER)
add_subdirectory(DO_NOT_CALL_SIGNAL_WITHIN_HANDLER)
add_subdirectory(DO_NOT_CAST_TO_AN_OUT_OF_RANGE_ENUM_VALUE)
add_subdirectory(DO_NOT_DESTROY_A_MUTEX)
add_subdirectory(DO_NOT_RETURN_SIGNAL_HANDLERS) 
add_subdirectory(DOUBLE_FREE)
add_subdirectory(DOUBLE_LOCK)
add_subdirectory(DOUBLE_UNLOCK)
add_subdirectory(DOUBLE_OPEN)

add_subdirectory(EXECL_REVEALS_DATA)
add_subdirectory(FREE_NON_HEAP)
add_subdirectory(GUARANTEE_EXCEPTION_SAFETY)
add_subdirectory(IMPROPER_AUTHORIZATION)
add_subdirectory(IMPROPER_NULL_TERMINATION)
add_subdirectory(INCORRECT_USE_OF_PLACEMENT_NEW)
add_subdirectory(INFORMATION_LEAK)
add_subdirectory(INTEGER_OVERFLOW)
add_subdirectory(INTEGER_UNDERFLOW)
add_subdirectory(INVALID_ITERATOR)
add_subdirectory(LDAP_INJECTION)
add_subdirectory(LEAK.MEMORY)
add_subdirectory(LEAK.RESOURCE)

add_subdirectory(MEMCPY_WITH_OVERLAPPING_REGIONS)
add_subdirectory(MISMATCH.MALLOC_TO_DELETE)
add_subdirectory(MISMATCH.MALLOC_TO_DELETE_ARRAY)
add_subdirectory(MISMATCH.NEW_ARRAY_TO_DELETE)
add_subdirectory(MISMATCH.NEW_ARRAY_TO_FREE)
add_subdirectory(MISMATCH.NEW_TO_DELETE_ARRAY)
add_subdirectory(MISMATCH.NEW_TO_FREE)
add_subdirectory(MISMATCH.RESOURCE)
add_subdirectory(MISSING_MESSAGE_ID_WHEN_GENERATING_MAC)
add_subdirectory(MISSING_RETURN)
add_subdirectory(MUST_NOT_BE_MUTATE_SRC_OBJ)

add_subdirectory(NEGATIVE_FILE_DESCRIPTOR)
add_subdirectory(NEGATIVE_MOD_OPERATION)
add_subdirectory(NORETURN_DECLARED)
add_subdirectory(NULL_DEREF)
add_subdirectory(NULL_DEREF.MALLOC_FAILED)
add_subdirectory(NULL_DEREF.CHECK_AFTER_DEREF)
add_subdirectory(NULL_DEREF.MISSING_CHECK)

add_subdirectory(OS_COMMAND_INJECTION)

add_subdirectory(OVERRUN.CONTAINER)
add_subdirectory(OVERRUN.DYNAMIC)
add_subdirectory(OVERRUN.DYNAMIC.BAD_COND)
add_subdirectory(OVERRUN.DYNAMIC.IN_FUNC_CALL)
add_subdirectory(OVERRUN.DYNAMIC.IN_FUNC_CALL.BAD_COND)

add_subdirectory(OVERRUN.STATIC)
add_subdirectory(OVERRUN.STATIC.BAD_COND)
add_subdirectory(OVERRUN.STATIC.IN_FUNC_CALL)
add_subdirectory(OVERRUN.STATIC.IN_FUNC_CALL.BAD_COND)

add_subdirectory(PARAMETER_POINTER_TO_LOCAL)
add_subdirectory(PATH_TRAVERSAL)
add_subdirectory(PLAINTEXT_PASSWORD)
add_subdirectory(PRESERVE_THREAD_SAFETY_AND_LIVENESS)
add_subdirectory(PREVENT_DATA_RACES)
add_subdirectory(PREVENT_MATH_FUNCTIONS_ERROR)
add_subdirectory(PROCESS_CONTROL)
add_subdirectory(RACE_CONDITION.EXT)
add_subdirectory(RESOURCE_INJECTION)
add_subdirectory(RESET_SIGNAL_HANDLER)
add_subdirectory(RETURN_FREE)
add_subdirectory(RETURN_LOCAL)

add_subdirectory(SHIFT_EXCEEDS_BIT_WIDTH)
add_subdirectory(SHIFT_NEGATIVE)
add_subdirectory(SIGNAL_HANDLER_CALLS_UNSAFE_FUNCTION)

add_subdirectory(SQL_INJECTION)

add_subdirectory(TRYLOCK_FAIL)
add_subdirectory(TYPE_OVERRUN.STATIC)
add_subdirectory(TYPE_OVERRUN.BAD_COND)
add_subdirectory(TYPE_OVERRUN.IN_FUNC_CALL)
add_subdirectory(TYPE_OVERRUN.IN_FUNC_CALL.BAD_COND)

add_subdirectory(TYPE_UNDERRUN.STATIC)
add_subdirectory(TYPE_UNDERRUN.BAD_COND)
add_subdirectory(TYPE_UNDERRUN.IN_FUNC_CALL)
add_subdirectory(TYPE_UNDERRUN.IN_FUNC_CALL.BAD_COND)

add_subdirectory(UNBOUNDED_SOURCE_TO_ARRAY)
add_subdirectory(UNCAUGHT_EXCEPTION)
add_subdirectory(UNDERRUN.DYNAMIC)
add_subdirectory(UNDERRUN.DYNAMIC.BAD_COND)
add_subdirectory(UNDERRUN.DYNAMIC.IN_FUNC_CALL)
add_subdirectory(UNDERRUN.DYNAMIC.IN_FUNC_CALL.BAD_COND)

add_subdirectory(UNDERRUN.STATIC)
add_subdirectory(UNDERRUN.STATIC.BAD_COND)
add_subdirectory(UNDERRUN.STATIC.IN_FUNC_CALL)
add_subdirectory(UNDERRUN.STATIC.IN_FUNC_CALL.BAD_COND)

add_subdirectory(UNREACHABLE_CODE)
add_subdirectory(UNINIT)
add_subdirectory(UNREASONABLE_PARAMETER)
add_subdirectory(USE_AFTER_CLOSE.EXT)
add_subdirectory(USE_AFTER_FREE)
add_subdirectory(USE_AFTER_MOVE)
add_subdirectory(USE_CORRECT_BYTE_ORDERING)
add_subdirectory(USE_OF_HARDCODED_CRYPTOGRAPHIC_KEY)
add_subdirectory(USELESS_ASSIGNMENT)

add_subdirectory(XQUERY_INJECTION.CPP)
add_subdirectory(XPATH_INJECTION.CPP)
add_subdirectory(UNRESTRICTED_UPLOAD_OF_FILE.CPP)
add_subdirectory(OPEN_REDIRECT.CPP)

add_subdirectory(REDUNDANT_CONDITION)

